test/scc_test/exp/semantic-errors/044.t
void test()
{
    10 %= 2;
}